syntax = "proto2"; 

enum Stype
{
	INVALID_STYPE = 0;
	Auth = 1;
	System = 2;
	Logic = 3;
}

enum Cmd {
	INVALID_CMD = 0;

	eGuestLoginReq = 1;//游客登录
	eGuestLoginRes = 2;//游客登录还回
	eRelogin = 3;//重复登录
	eUserLostConn = 4;//玩家掉线
	eEditProfileReq = 5;//修改玩家信息
	eEditProfileRes = 6;
}

message GuestLoginReq
{
	required string guestkey = 1;
}

message UserCenterInfo
{
	required string unick = 1;
	required int32 sex = 2;
	required int32 face = 3;
	required int32 uvip = 4;
	required int32 uid = 5;
}

message GuestLoginRes
{
	required int32 status = 1;
	optional UserCenterInfo info = 2;
}

message UserLostConn
{
	required int32 status = 1;
}

message Relogin
{
	required int32 status = 1;
}

message EditProfileReq {
	required string unick = 1;
	required int32 uface = 2;
	required int32 usex = 3;
}

message EditProfileRes {
	required int32 status = 1;
}

